@@ -4,6 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
+        <configuration>
+            <release>17</release>
+            <compilerArgs>
+                <arg>--add-exports</arg>
+                <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            </compilerArgs>
+        </configuration>
+    </plugin>
+
     <groupId>org.apache.maven.archetypes</groupId>
     <artifactId>maven-archetype-quickstart</artifactId>
     <version>1.0-SNAPSHOT</version>
